* Added support of resource::ILoader by i18n::Dictionary class when loading JSON
  files.
* Added methods Path::is_dot(), Path::is_dotdot(), Path::is_dots().
* Optimized methods Path::is_dot() and Path::is_dotdot().
* Added methods Path::valid_file_name() and Path::valid_path_name().
* Fixed bug in Path::remove_last() method.

=== 0.5.4 ===
* Updated LSPString lltl specifier to match lltl-lib 0.5.3.
* Updated build files to support static library builds.
* Updated license files to better conform LGPL3+ license.
* Updated build scripts that now use tags without prefixes first.
* Updated headers and license files to match LGPL3+ license.
* Updated make files to produce static library, pkgconf file and source tree.

=== 0.5.3 ===
* Added system::get_temporary_dir() functions.
* Added support of Hydrogen drumkit XML file format.
* Better compatibility with old gcc, glibc and libsndfile.
* Replaced pthread_yield() with sched_yield() calls in mutexes.

=== 0.5.2 ===
* Added i18n support.
* Updated swap functions for expr::Parameters and LSPString.
* Implemented additional parsing methods to the lsp::Color class.
* Added unit tests for LSPString and Color classes.
* Renamed invalid resolve_entity() method to set_value() method for xml::PullParser.
* Added TT_COMMA token to expr:Tokenizer.
* Added support of TF_XKEYWORDS flag by expr:Tokenizer which allows to interpret
  keywords as barewords.
* Changed bug in UTF-16 decoding of surrogate pairs.
* Improved JSON serialization to match standard.

=== 0.5.1 ===
* Added Color class.
* Added 'valid_library_name' routines to ipc::Library class for library
  name validation.

=== 0.5.0 ===
* Initial release.
* Core runtime modules.
* Support of simple built-in expression language interpreter.
* Support of different file formats.
* Basic OS-independent I/O abstraction layer support.
* OS-independend character set conversion layer support.
* OS-independend Inter-process communication (IPC) primitives.